--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+<html lang="pl-PL">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Basic reader</title>
 </head>
+<style>
+    table, tr, td {
+        border: 1px solid black;
+    }
+</style>
 <body>
-    Hello
+Nasze miejsce:
+<table>
+    <th:block th:each="opt : ${naszemiejsceMenu}">
+        <tr>
+            <td th:text="${opt.name}" /></td>
+            <td th:text="${opt.option}" /></td>
+            <td th:text="${opt.price}" /></td>
+        </tr>
+    </th:block>
+</table>
 </body>
 </html>
